# euporie

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  CONVENTIONS.rst  DEVELOPMENT.rst  README.rst  conftest.py  pyproject.toml
changelog/: +app-wide-icon-config.changed.rst  +atomic-save.added.rst  +autopair-setting.added.rst  +background-patterns.added.rst  +bracketed-paste-replace-selection.fixed.rst  +cell-attachments.added.rst  +color-detection.changed.rst  +css-optimization.changed.rst  +custom-key-bindings.added.rst  +debounce-resize.changed.rst  +default-syntax-theme.changed.rst  +docs-update.changed.rst  +dropshadow-target.changed.rst  +fix-console-to-notebook.fixed.rst  +fix-local-kernel-inspect.fixed.rst  +fix-pixel-mouse-resize.fixed.rst  +graphics-obscured.changed.rst  +jupytext-save-truncation.fixed.rst  +language-config.changed.rst  +log-graphics-protocol.added.rst  +menu-improvements.added.rst  +notify-command.added.rst  +open-config-file.added.rst  +osc8-hyperlinks.added.rst  +palette-hide-arg-commands.changed.rst  +pandoc-typst-latex-renderer.added.rst  +pipe-tab.added.rst  +refresh-custom-colors.changed.rst  +scroll-cell-outputs-horizontally-faster.added.rst  +select-copy-output.added.rst  +set-setting-value.added.rst  +terminal-tabs.added.rst  +tip-of-the-day.changed.rst  +toc-cursor-update.fixed.rst  +toggle-comments.added.rst  +toolbar-history.added.rst  +towncrier.changed.rst  +update-display-data.fixed.rst  +uv-migration.changed.rst  +variables-viewer.added.rst
changelog.d/: +apptk-package.added.rst  +chawan-renderer.added.rst  +drain-stdin.fixed.rst  +file-browser-improvements.changed.rst  +float-overflow.added.rst  +graphics-refactor.changed.rst  +helix-keybindings.added.rst  +keybinding-refactor.changed.rst  +left-float-fix.fixed.rst  +mermaid-diagrams.added.rst  +micro-selection-fix.fixed.rst  +refactor-config.changed.rst  +rich-html.changed.rst  +scrollbar-fix.fixed.rst  +separate-packages.changed.rst  +sgr-attributes.added.rst  +show-shadows.fixed.rst  +split-distribution.fixed.rst  +synchronized-output.added.rst  _template.rst  release-tooling.added
docs/: conf.py  index.rst  requirements.txt
docs/development/: architecture.rst  contributing.rst  conventions.rst  extending.rst  release.rst
docs/pages/: cli.rst  configuration.rst  gallery.rst  getting_started.rst  glossary.rst  installation.rst  keybindings.rst  overview.rst  related.rst  troubleshooting.rst
docs/pages/guides/: ipywidgets.rst  kernels.rst  lsp.rst  multiplexers.rst  remote_notebooks.rst  terminal_graphics.rst  theming.rst
euporie/apptk/: commands.py
euporie/apptk/convert/: datum.py
euporie/apptk/widgets/: menus.py
euporie/core/: __init__.py  style.py
euporie/core/convert/: datum.py
euporie/core/kernel/: local.py
euporie/core/widgets/: palette.py
euporie/hub/: app.py
euporie/notebook/: app.py
scripts/: debug_vt100_input.py  document_cli_flags.py  document_commands.py  document_configuration_options.py  document_default_key_bindings.py  generate_more_keys.py  publish.py  release.py  show.py  update_language_reference.py
src/euporie/launch/: __init__.py  app.py
src/euporie/meta/: __init__.py
tests/: test_async_utils.py  test_core_comm_base.py  test_core_commands.py  test_core_convert_datum.py  test_core_convert_formats_markdown.py  test_core_convert_mime.py  test_core_convert_utils.py  test_core_current.py  test_core_ft_ansi.py  test_core_ft_html.py  test_core_ft_utils.py  test_core_lexers.py  test_core_pygments.py  test_core_style.py  test_core_utils.py  test_core_validation.py
