[project]
name = "euporie"
version = "3.0.0-dev"
description = 'Euporie is a suite of terminal applications for interacting with Jupyter kernels'
readme = "README.rst"
requires-python = ">=3.10"
# license = "MIT"
keywords = ["euporie", "jupyter", "ipython", "markdown", "terminal", "notebook"]
authors = [
  { name = "Josiah Outram Halstead", email = "josiah@halstead.email" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Environment :: Console",
  "Framework :: Jupyter",
  "Topic :: Scientific/Engineering",
]
dependencies = ["euporie-notebook", "euporie-preview", "euporie-console"]

[tool.uv.sources]
apptk = { workspace = true }
euporie-core = { workspace = true }
euporie-notebook = { workspace = true }
euporie-preview = { workspace = true }
euporie-console = { workspace = true }
euporie-hub = { workspace = true }

[tool.uv]
managed = true
package = false  # the project itself is not a package

[tool.uv.workspace]
members = ["packages/*"]
exclude = []

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"


## Tool configuration #########################################################


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [ # "ANN", "B", "C", "D", "E", "F", "I", "Q", "S", "T", "UP"]
  "ANN",   #
  "ASYNC", #
  # "ARG",   # Unused arguments
  "B",
  "C",
  "C4",
  "D",
  "E",
  "F",
  "FA",
  "G",
  "I",
  "PIE", # miscellaneous lints
  "PT",  # common style issues or inconsistencies with pytest-based tests
  "PTH", # use pathlib
  "Q",   # quotes
  "S",   # bandit security testingi
  "RUF", # ruff-specific
  "SIM", # simplify
  # "RET", # return values
  "T",
  "TCH", # type checking import blocks
  "UP",
  "W",
]
ignore = [
    # Use of typing.Any
    "ANN401",
    # Function too complex
    "C901",
    # Use of assert
    "S101",
    # Line to long
    "E501",
    # Google style docstrings
    "D203", "D204", "D213", "D215", "D400", "D404", "D406", "D407", "D408", "D409", "D413",
    # Allow empty functions in ABCs
    "B027",
    # zip() without an explicit strict= parameter
    "B905",
    # Allow enum aliases
    "PIE796",
    # Ignore subprocess warnings
    "S603", "S607",
    # Ignore ambiguous-unicode-character-string warning
    "RUF001",
    # Do not use `contextlib.suppress` instead of `try...except...pass`
    "SIM105",
    # Do not enforce ternary operators
    "SIM108",
]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["T201"]

[tool.ruff.format]
docstring-code-format = true


[tool.codespell]
ignore-words-list = "iterm,edn,controll,controle,als"
skip = "euporie/core/reference.py,.*"

[tool.typos.default.extend-words]
"als" = "als"
"iterm" = "iterm"


[tool.mypy]
# pretty = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
  "_frozen_importlib", "ipykernel", "fastjsonschema",
  "pyperclip", "upath.*", "chafa.*", "timg", "pylatexenc.*", "pygments.*",
  "jupytext.*",
  "ruff.*", "ssort",
  "flatlatex.*", "timg", "img2unicode", "cairosvg", "teimpy", "numpy", "mtable", "imagesize", "matplotlib.*", "ziamath", "sympy.*",
  "magic", "fsspec.*",
  "pytest.*",
]
ignore_missing_imports = true


[tool.pytest.ini_options]
asyncio_mode = "auto"
