[project]
name = "euporie"
dynamic = ["version"]
description = 'Euporie is a suite of terminal applications for interacting with Jupyter kernels'
readme = "README.rst"
requires-python = ">=3.10"
# license = "MIT"
keywords = ["euporie", "jupyter", "ipython", "markdown", "terminal", "notebook"]
authors = [
  { name = "Josiah Outram Halstead", email = "josiah@halstead.email" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Environment :: Console",
  "Framework :: Jupyter",
  "Topic :: Scientific/Engineering",
]
dependencies = ["euporie-notebook", "euporie-preview", "euporie-console"]

[tool.uv.sources]
apptk = { workspace = true }
euporie-core = { workspace = true }
euporie-notebook = { workspace = true }
euporie-preview = { workspace = true }
euporie-console = { workspace = true }
euporie-hub = { workspace = true }

[tool.uv]
managed = true

[tool.uv.workspace]
members = ["packages/*"]
exclude = []

[project.scripts]
euporie = "euporie.launch.app:LaunchApp.launch"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["src/euporie"]

[tool.hatch.build.targets.sdist]
include = ["src/euporie/launch"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
    "towncrier>=24.8.0",
]
docs = [
    "intersphinx-registry~=0.2411",
    "sphinx~=8.1",
    "sphinx-argparse-cli~=1.19",
    "sphinx-autobuild~=2024.10",
    "sphinx-copybutton~=0.5",
    "sphinx-design~=0.6.0",
    "sphinx-rtd-theme~=3.0",
    "sphinxext-opengraph~=0.9",
]
lint = [
    "codespell>=2.4.1",
    "pre-commit-hooks>=6.0.0",
    "prek>=0.3.3",
    "ruff>=0.15.2",
]
test = [
    "html2text>=2025.4.15",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-magic>=0.4.27",
]


## Tool configuration #########################################################


[tool.towncrier]
name = "euporie"
directory = "changelog.d"
filename = "CHANGELOG.rst"
template = "changelog.d/_template.rst"
title_format = false
underlines = ["*", "=", "-"]
issue_format = "`#{issue} <https://github.com/joouha/euporie/issues/{issue}>`_"
package = "euporie.meta"
package_dir = "src"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [ # "ANN", "B", "C", "D", "E", "F", "I", "Q", "S", "T", "UP"]
  "ANN",   #
  "ASYNC", #
  # "ARG",   # Unused arguments
  "B",
  "C",
  "C4",
  "D",
  "E",
  "F",
  "FA",
  "G",
  "I",
  "PIE", # miscellaneous lints
  "PT",  # common style issues or inconsistencies with pytest-based tests
  "PTH", # use pathlib
  "Q",   # quotes
  "S",   # bandit security testingi
  "RUF", # ruff-specific
  "SIM", # simplify
  # "RET", # return values
  "T",
  "TCH", # type checking import blocks
  "UP",
  "W",
]
ignore = [
    # Use of typing.Any
    "ANN401",
    # Anync Pathlib
    "ASYNC240",
    # Function too complex
    "C901",
    # Use of assert
    "S101",
    # Line to long
    "E501",
    # Google style docstrings
    "D203", "D204", "D213", "D215", "D400", "D404", "D406", "D407", "D408", "D409", "D413",
    # Allow empty functions in ABCs
    "B027",
    # zip() without an explicit strict= parameter
    "B905",
    # Allow enum aliases
    "PIE796",
    # Ignore subprocess warnings
    "S603", "S607",
    # Ignore ambiguous-unicode-character-string warning
    "RUF001",
    # Do not use `contextlib.suppress` instead of `try...except...pass`
    "SIM105",
    # Do not enforce ternary operators
    "SIM108",
]

[tool.ruff.lint.isort]
known-first-party = ["euporie"]
known-third-party = ["apptk"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["T201"]

[tool.ruff.format]
docstring-code-format = true


[tool.codespell]
ignore-words-list = "adn,als,controle,controll,abd,edn,iterm"

[tool.typos.default.extend-words]
"als" = "als"
"iterm" = "iterm"


[tool.mypy]
# pretty = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
  "_frozen_importlib", "ipykernel", "fastjsonschema",
  "pyperclip", "upath.*", "chafa.*", "timg", "pylatexenc.*", "pygments.*",
  "jupytext.*",
  "ruff.*", "ssort",
  "flatlatex.*", "timg", "img2unicode", "cairosvg", "teimpy", "numpy", "mtable", "imagesize", "matplotlib.*", "ziamath", "sympy.*",
  "magic", "fsspec.*",
  "pytest.*",
]
ignore_missing_imports = true

[tool.taskipy.settings]
runner = "uv run"

[tool.taskipy.tasks]
# Formatting
format = "ruff format ."
format-check = "ruff format --check --diff ."

# Linting
lint = "ruff check --fix . && codespell -i 3 -w ."
lint-check = "ruff check . && codespell ."

# Combined format + lint
fmt = "task format && task lint"
fmt-check = "task format-check && task lint-check"

# Type checking
type = "mypy --namespace-packages -p euporie -p scripts"

# Testing
test-3-10 = "uv run --python 3.10 --isolated --group test pytest"
test-3-11 = "uv run --python 3.11 --isolated --group test pytest"
test-3-12 = "uv run --python 3.12 --isolated --group test pytest"
test-3-13 = "uv run --python 3.13 --isolated --group test pytest"
test-3-14 = "uv run --python 3.14 --isolated --group test pytest"
test-pypy-3-11 = "uv run --python pypy3.11 --isolated --group test pytest"
test = "sh -c 'for v in 3-10 3-11 3-12 3-13 3-14 pypy-3-11; do task test-$v \"$0\" \"$@\" || exit 1; done' --"
cov = "coverage run --parallel -m pytest"

# Documentation
docs-build = "sphinx-build docs docs/_build/html"
docs-serve = "python -m http.server --directory docs/_build/html/"
docs-autobuild = "sphinx-autobuild docs docs/_build/html"


[tool.pytest.ini_options]
asyncio_mode = "auto"
